--- a/src/error.html
+++ b/src/error.html
@@ -1,9 +1,12 @@
 <html lang="en">
   <body>
     <div class="input-sheet">
+      <div class="input-sheet__logo">
+        <a href="https://www.thoughtworks.com"><img src="/images/tw-logo.png" /></a>
+      </div>
       <div class="input-sheet__banner">
         <div>
-          <h1>ICS Tech Radar</h1>
+          <h1>Build your own radar</h1>
         </div>
       </div>
       <div align="center">
@@ -12,6 +15,12 @@
           <p>
             Oops! It seems like the page you were trying to find isn't around anymore <br />(or at least isn't here).
           </p>
+        </div>
+        <div align="center" class="support">
+          <p>You might want to look at</p>
+        </div>
+        <div class="support-link">
+          <span><a href="https://www.thoughtworks.com/radar/byor">Get started on building your radar</a></span>
         </div>
       </div>
     </div>
