Remove references to Thoughtworks and associated logos from HTML and JavaScript files.

--- a/src/error.html
+++ b/src/error.html
@@ -1,9 +1,7 @@
 <html lang="en">
   <body>
     <div class="input-sheet">
-      <div class="input-sheet__logo">
-        <a href="https://www.thoughtworks.com"><img src="/images/tw-logo.png" /></a>
-      </div>
+  <!-- Logo removed -->
       <div class="input-sheet__banner">
         <div>
           <h1>Build your own radar</h1>
@@ -20,7 +18,7 @@
           <p>You might want to look at</p>
         </div>
         <div class="support-link">
-          <span><a href="https://www.thoughtworks.com/radar/byor">Get started on building your radar</a></span>
+          <span><a href="#">Get started on building your radar</a></span>
         </div>
       </div>
     </div>
