--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,7 @@
   </head>
 
   <body>
-    <header class="input-sheet__logo">
-      <div>
-        <span>Powered by</span>
-        <a href="https://www.thoughtworks.com"><img src="/images/tw-logo.png" alt="Thoughtworks logo" /></a>
-      </div>
-    </header>
+  <!-- Header/logo removed -->
     <div class="hero-banner">
       <div class="hero-banner__wrapper">
         <h1 class="hero-banner__title-text">Build your own Radar</h1>
@@ -27,18 +22,12 @@
       <div id="pdf-cover-page">
         <img class="pdf-banner-image" src="/images/pdf_banner.png" alt="Pdf cover image" width="100%" height="300px" />
         <h1 class="pdf-title"></h1>
-        <div class="pdf-powered-by-text">
-          <span>Powered by</span>
-          <a href="https://www.thoughtworks.com">
-            <img class="pdf-tw-logo" src="/images/tw-logo.png" alt="logo" />
-          </a>
-        </div>
+  <!-- PDF powered-by/logo removed -->
       </div>
       <div class="helper-description home-page">
         <p>
-          Once you've <a href="https://www.thoughtworks.com/radar/byor">created your Radar</a> you can use this service
-          to generate an interactive version of your Technology Radar. Not sure how?
-          <a href="https://www.thoughtworks.com/radar/byor">Read this first.</a>
+          Once you've created your Radar you can use this service
+          to generate an interactive version of your Technology Radar.
         </p>
         <span class="loader-text">
           <span class="loader-text__title">Building your radar...</span>
@@ -54,8 +43,7 @@
       <div id="error-container" class="error-container home-page"></div>
       <div class="input-sheet-form home-page">
         <p>
-          Enter the URL of your
-          <a href="https://www.thoughtworks.com/radar/byor" target="_blank">Google Sheet, CSV or JSON</a> file below…
+          Enter the URL of your Google Sheet, CSV or JSON file below
         </p>
         <form id="byor-form-submit" method="get">
           <input
