Update header and footer titles to "ICS Tech Radar" and add quadrant and ring descriptions

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <!-- Header/logo removed -->
     <div class="hero-banner">
       <div class="hero-banner__wrapper">
-        <h1 class="hero-banner__title-text">Build your own Radar</h1>
+  <h1 class="hero-banner__title-text">ICS Tech Radar</h1>
       </div>
     </div>
     <main>
@@ -64,6 +64,24 @@
         </p>
       </div>
       <div class="all-quadrants-mobile show-all-quadrants-mobile"></div>
+      <!-- BEGIN: Quadrant and Ring Descriptions -->
+      <div id="all-quadrants-descriptions" style="margin:40px auto 20px auto;max-width:900px;padding:24px;background:#f8f8f8;border-radius:8px;font-size:1.1em;">
+        <h2>Quadrants</h2>
+        <ul>
+          <li><b>Tools</b>: Technologies such as frameworks, libraries, and utilities used to build and operate systems.</li>
+          <li><b>Techniques</b>: Practices, patterns, and methodologies that guide how work is done.</li>
+          <li><b>Solutions</b>: Internally-developed systems and services.</li>
+          <li><b>Platforms</b>: Foundational environments or ecosystems that we build solutions on top of.</li>
+        </ul>
+        <h2>Rings</h2>
+        <ul>
+          <li><b>Adopt</b>: Items that are mature and recommended for widespread use.</li>
+          <li><b>Assess</b>: Items that are recommended but not mandatory; teams may experiment with them to determine fit and value.</li>
+          <li><b>Contain</b>: Items that are no longer strategic and should not be adopted for new solutions; usage should be limited and phased out.</li>
+          <li><b>End-of-Life</b>: Items no longer supported or approved for use as of a given date; teams should plan for decommissioning or replacement.</li>
+        </ul>
+      </div>
+      <!-- END: Quadrant and Ring Descriptions -->
       <div class="graph-footer"></div>
     </main>
     <footer class="home-page">
@@ -73,25 +91,18 @@
           <a href="https://www.thoughtworks.com">
             <img class="pdf-tw-logo" src="/images/tw-logo.png" alt="logo" />
           </a>
-          <div class="pdf-footer-title">Build your own Radar</div>
+          <div class="pdf-footer-title">ICS Tech Radar</div>
           <a class="radar-link" id="generated-radar-link" href="https://radar.thoughtworks.com">
             radar.thoughtworks.com
           </a>
         </div>
       </div>
-      <p class="agree-terms">
-        Powered by <a href="https://www.thoughtworks.com"> Thoughtworks</a>. By using this service you agree to
-        <a href="https://www.thoughtworks.com/radar/tos">Thoughtworks' terms of use</a>. You also agree to our
-        <a href="https://www.thoughtworks.com/privacy-policy">privacy policy</a>, which describes how we will gather,
-        use and protect any personal data contained in your public Google Sheet. This software is
-        <a href="https://github.com/thoughtworks/build-your-own-radar">open source</a> and available for download and
-        self-hosting.
-      </p>
+  <!-- agree-terms paragraph removed -->
     </footer>
     <div class="pdf-page-footer">
       <div class="footer-left">radar.thoughtworks.com</div>
       <div class="footer-right">
-        Build your own radar, <span class="footer-date">dd/mm/yyyy</span> | <span class="footer-page-number">00</span>
+  ICS Tech Radar, <span class="footer-date">dd/mm/yyyy</span> | <span class="footer-page-number">00</span>
       </div>
     </div>
   </body>
