--- a/src/index.html
+++ b/src/index.html
@@ -65,20 +65,20 @@
       </div>
       <div class="all-quadrants-mobile show-all-quadrants-mobile"></div>
       <!-- BEGIN: Quadrant and Ring Descriptions -->
-      <div id="all-quadrants-descriptions" style="margin:40px auto 20px auto;max-width:900px;padding:24px;background:#f8f8f8;border-radius:8px;font-size:1.1em;">
-        <h2>Quadrants</h2>
-        <ul>
-          <li><b>Tools</b>: Technologies such as frameworks, libraries, and utilities used to build and operate systems.</li>
-          <li><b>Techniques</b>: Practices, patterns, and methodologies that guide how work is done.</li>
-          <li><b>Solutions</b>: Internally-developed systems and services.</li>
-          <li><b>Platforms</b>: Foundational environments or ecosystems that we build solutions on top of.</li>
+  <div id="all-quadrants-descriptions" class="quadrant-ring-descriptions">
+        <h2 class="qr-section-title">Quadrants</h2>
+        <ul class="qr-section-list">
+          <li><span class="qr-section-label">Tools</span>: Technologies such as frameworks, libraries, and utilities used to build and operate systems.</li>
+          <li><span class="qr-section-label">Techniques</span>: Practices, patterns, and methodologies that guide how work is done.</li>
+          <li><span class="qr-section-label">Solutions</span>: Internally-developed systems and services.</li>
+          <li><span class="qr-section-label">Platforms</span>: Foundational environments or ecosystems that we build solutions on top of.</li>
         </ul>
-        <h2>Rings</h2>
-        <ul>
-          <li><b>Adopt</b>: Items that are mature and recommended for widespread use.</li>
-          <li><b>Assess</b>: Items that are recommended but not mandatory; teams may experiment with them to determine fit and value.</li>
-          <li><b>Contain</b>: Items that are no longer strategic and should not be adopted for new solutions; usage should be limited and phased out.</li>
-          <li><b>End-of-Life</b>: Items no longer supported or approved for use as of a given date; teams should plan for decommissioning or replacement.</li>
+        <h2 class="qr-section-title">Rings</h2>
+        <ul class="qr-section-list">
+          <li><span class="qr-section-label">Adopt</span>: Items that are mature and recommended for widespread use.</li>
+          <li><span class="qr-section-label">Assess</span>: Items that are recommended but not mandatory; teams may experiment with them to determine fit and value.</li>
+          <li><span class="qr-section-label">Contain</span>: Items that are no longer strategic and should not be adopted for new solutions; usage should be limited and phased out.</li>
+          <li><span class="qr-section-label">End-of-Life</span>: Items no longer supported or approved for use as of a given date; teams should plan for decommissioning or replacement.</li>
         </ul>
       </div>
       <!-- END: Quadrant and Ring Descriptions -->
