Refactor input handling to remove deprecated CSV form and update JSON file processing logic

--- a/src/index.html
+++ b/src/index.html
@@ -41,26 +41,10 @@
         </span>
       </div>
       <div id="error-container" class="error-container home-page"></div>
-      <div class="input-sheet-form home-page">
-        <p>
-          Enter the URL of your Google Sheet, CSV or JSON file below
-        </p>
-        <form id="byor-form-submit" method="get">
-          <input
-            type="text"
-            name="documentId"
-            id="document-input"
-            placeholder="e.g. https://docs.google.com/spreadsheets/d/<sheetid> or hosted CSV/JSON file"
-            required=""
-          />
-          <input type="submit" value="Build my radar" />
-          <a href="https://www.thoughtworks.com/radar/byor#guide">Need help?</a>
-        </form>
-      </div>
       <div class="graph-header"></div>
       <div id="radar">
         <p class="no-blip-text">
-          There are no blips on this quadrant, please check your Google sheet/CSV/JSON file once.
+          There are no blips on this quadrant, please check your data source.
         </p>
       </div>
       <div class="all-quadrants-mobile show-all-quadrants-mobile"></div>
