Changed the name of the quadrant "solutions" to "internal solutions"

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
         <ul class="qr-section-list">
           <li><span class="qr-section-label">Tools</span>: Technologies such as frameworks, libraries, and utilities used to build and operate systems.</li>
           <li><span class="qr-section-label">Techniques</span>: Practices, patterns, and methodologies that guide how work is done.</li>
-          <li><span class="qr-section-label">Solutions</span>: Internally-developed systems and services.</li>
+          <li><span class="qr-section-label">Internal Solutions</span>: Internally-developed systems and services.</li>
           <li><span class="qr-section-label">Platforms</span>: Foundational environments or ecosystems that we build solutions on top of.</li>
         </ul>
         <h2 class="qr-section-title">Rings</h2>
